# adv_mla_lab_1

./: Makefile  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  make.bat
models/: ohe.joblib
work/adv_mla_lab_1/notebooks/: 1_baseline.ipynb  36120_AdvMLA-Lab1_Exercise2-Instructions.ipynb
