[tool.poetry]
name = "lab-1"
version = "0.1.0"
description = ""
authors = ["KeiHiroshima <hiroshimakei.0428@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_1"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
